Added h1 and h3 in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 *{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #FFE4B6;
+    background-color: #F2EDDC;
+}
+
+h1 {
+    color: #032859;
+}
+
+h3 {
+    color: #FE6A2C;
 }
