Added classes tudocelular and nasa to style.css

--- a/css/style.css
+++ b/css/style.css
@@ -19,5 +19,13 @@ a {
 }
 
 .tecmundo {
-    color: #032859;
+    color: #297ae4;
+}
+
+.tudocelular {
+    color: #A6EB17;
+}
+
+.nasa {
+    color: #f7280c;
 }
